--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>Prueba 1 git UD 4 - Tarea 1- ENDES mod1</h1>
-			<h2>wdad</h2>
+			<h2>wdad wad</h2>
         </header>
     </body>
 </html>
