--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <h1>Prueba 2 git UD 4 - Tarea 1- ENDES mod1</h1>
-			<h2>prueba2</h2>
+			<h2>UPDATE 2</h2>
         </header>
     </body>
 </html>
